--- a/www/public/global.css
+++ b/www/public/global.css
@@ -3,7 +3,7 @@
     --break-m: 960px;
     --break-l: 1200px;
 	--break-xl: 1600px;
-	
+
 	/* Typography */
     --font-family: 'Sans', sans-serif;
     --font-weight: 400;
@@ -11,6 +11,7 @@
     --line-height-s: 1.25rem;
     --letter-spacing: .075px;
 }
+
 
 /* Typography */
 * {
@@ -64,25 +65,20 @@ a {
 *,
 *::after,
 *::before {
-	/* -webkit-user-select: none; */
 	-webkit-user-drag: none;
 	-webkit-app-region: no-drag;
 	touch-action: manipulation;
-	/* cursor: default; */
 }
 
 html, body {
-	/* position: fixed; */
 	width: 100%;
 	height: 100%;
-	margin: 0; 
+	margin: 0;
 	padding: 0;
     overflow: hidden;
-    /* height: 1000px; */
 }
 
 body {
     color: white;
-    background-color: #2c333a;
-    /* background-color: rgba(47,53,67); */
+    background-color: #22262E;
 }
