remove undeed staff

--- a/www/public/global.css
+++ b/www/public/global.css
@@ -83,7 +83,7 @@ body {
     background-color: #1b1f23;
 }
 
-#slidy.slidy .slidy-dots li.active button {
+/* #slidy.slidy .slidy-dots li.active button {
     border: 1px solid blue;
     background: blue;
-}
+} */
