--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -12,8 +12,8 @@ body {
     padding: 8px;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-        "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -141,14 +141,14 @@ legend p {
     }
 }
 
-[scheme="dark"] {
+[scheme='dark'] {
     color-scheme: dark;
     --color: white;
     --back: black;
     --accent: red;
 }
 
-[scheme="light"] {
+[scheme='light'] {
     color-scheme: light;
     --color: black;
     --back: white;
