--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -12,8 +12,8 @@ body {
     padding: 8px;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -141,14 +141,14 @@ legend p {
     }
 }
 
-[scheme='dark'] {
+[scheme="dark"] {
     color-scheme: dark;
     --color: white;
     --back: black;
     --accent: red;
 }
 
-[scheme='light'] {
+[scheme="light"] {
     color-scheme: light;
     --color: black;
     --back: white;
@@ -254,18 +254,20 @@ ul#slidy li img {
 
 /* iOS */
 @supports (-webkit-touch-callout: none) {
-    ul#slidy li img {
-        width: auto;
+    ul.slidy-ul li img {
+        /* width: auto; */
+        max-width: 100%;
         will-change: transform;
     }
-    ul#slidy li:before {
+    ul.slidy-ul li:before {
         will-change: transform;
     }
 }
 /* MacOS */
 @media not all and (min-resolution: 0.001dpcm) {
     ul.slidy-ul li img {
-        width: auto;
+        /* width: auto; */
+        max-width: 100%;
         will-change: transform;
     }
     ul.slidy-ul li:before {
