--- a/www/public/global.css
+++ b/www/public/global.css
@@ -5,7 +5,7 @@
     --break-xl: 1600px;
 
     /* Typography */
-    --font-family: "Sans", sans-serif;
+    --font-family: 'Sans', sans-serif;
     --font-weight: 400;
     --line-height: 1.75rem;
     --line-height-s: 1.25rem;
