--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -12,8 +12,8 @@ body {
     padding: 8px;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -141,14 +141,14 @@ legend p {
     }
 }
 
-[scheme='dark'] {
+[scheme="dark"] {
     color-scheme: dark;
     --color: white;
     --back: black;
     --accent: red;
 }
 
-[scheme='light'] {
+[scheme="light"] {
     color-scheme: light;
     --color: black;
     --back: white;
@@ -240,11 +240,11 @@ ul.slidy-ul li:before {
 }
 
 ul#slidy li img {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     /* min-height: 100%; */
-    max-width: 100%;
-    object-fit: cover;
+    /* max-width: 100%; */
+    /* object-fit: cover; */
     /* min-width: 0; */
     /* position: relative; */
     /* z-index: 0; */
@@ -256,21 +256,21 @@ ul#slidy li img {
 @supports (-webkit-touch-callout: none) {
     ul.slidy-ul li img {
         /* width: auto; */
-        max-width: 100%;
+        /* max-width: 100%; */
         /* will-change: transform; */
     }
     ul.slidy-ul li:before {
-        will-change: transform;
+        /* will-change: transform; */
     }
 }
 /* MacOS */
 @media not all and (min-resolution: 0.001dpcm) {
     ul.slidy-ul li img {
         /* width: auto; */
-        max-width: 100%;
+        /* max-width: 100%; */
         /* will-change: transform; */
     }
     ul.slidy-ul li:before {
-        will-change: transform;
+        /* will-change: transform; */
     }
 }
