--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -1,8 +1,11 @@
+:root {
+    --slidy-carousel-height: 450px;
+}
+
 html,
 body {
     position: relative;
     width: 100%;
-    height: 100%;
 }
 
 body {
@@ -173,17 +176,6 @@ legend p {
     border-color: var(--accent) !important;
 }
 
-main {
-    height: 300px;
-}
-
-section {
-    overflow: hidden;
-    margin: var(--gap) auto;
-    height: 100%;
-    width: 100%;
-    position: relative;
-}
 #loader,
 #info {
     position: absolute;
@@ -194,83 +186,4 @@ section {
 }
 ul#scroll {
     overflow: auto;
-}
-ul#slidy {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-flow: var(--flow) nowrap;
-    gap: var(--gap);
-    min-width: 0;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-}
-
-ul.slidy-ul li {
-    --shadow: var(--color);
-    /* flex: 1 0 var(--width); */
-    /* width: var(--width); */
-    /* height: 100%; */
-    /* max-width: 100%; */
-    /* max-height: 100%; */
-    /* box-sizing: border-box; */
-    /* position: relative; */
-    box-shadow: inset 0px 0px 1px 1px var(--shadow);
-    /* border-color: transparent; */
-    /* border: 1px dashed var(--color); */
-    /* will-change: transform; */
-}
-ul.slidy-ul li.active {
-    --shadow: var(--accent);
-}
-ul.slidy-ul li.slotted {
-    --shadow: transparent;
-}
-
-ul.slidy-ul li:before {
-    content: attr(data-id);
-    position: absolute;
-    z-index: 1;
-    padding: 1rem;
-    bottom: 0;
-    background: var(--back);
-    /* will-change: transform; */
-}
-
-ul#slidy li img {
-    width: 100%;
-    height: 100%;
-    /* min-height: 100%; */
-    max-width: 100%;
-    object-fit: cover;
-    /* min-width: 0; */
-    /* position: relative; */
-    /* z-index: 0; */
-    /* overflow: hidden; */
-    /* will-change: transform; */
-}
-
-/* iOS */
-@supports (-webkit-touch-callout: none) {
-    ul.slidy-ul li img {
-        /* width: auto; */
-        max-width: 100%;
-        will-change: transform;
-    }
-    ul.slidy-ul li:before {
-        will-change: transform;
-    }
-}
-/* MacOS */
-@media not all and (min-resolution: 0.001dpcm) {
-    ul.slidy-ul li img {
-        /* width: auto; */
-        max-width: 100%;
-        will-change: transform;
-    }
-    ul.slidy-ul li:before {
-        will-change: transform;
-    }
 }
