--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -239,13 +239,13 @@ ul.slidy-ul li:before {
     /* will-change: transform; */
 }
 
-ul#slidy li img {
+ul.slidy-ul li img {
     /* width: 100%; */
     /* height: 100%; */
     /* min-height: 100%; */
     /* max-width: 100%; */
     /* object-fit: cover; */
-    /* min-width: 0; */
+    min-width: 100%;
     /* position: relative; */
     /* z-index: 0; */
     /* overflow: hidden; */
