--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -15,8 +15,8 @@ body {
     padding: 8px;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -119,6 +119,9 @@ legend p {
     display: inline;
     padding: 0;
 }
+legend img {
+    vertical-align: bottom;
+}
 
 :root {
     --color: black;
@@ -144,14 +147,14 @@ legend p {
     }
 }
 
-[scheme='dark'] {
+[scheme="dark"] {
     color-scheme: dark;
     --color: white;
     --back: black;
     --accent: red;
 }
 
-[scheme='light'] {
+[scheme="light"] {
     color-scheme: light;
     --color: black;
     --back: white;
