--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -12,8 +12,8 @@ body {
     padding: 8px;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -85,11 +85,13 @@ b {
 nav#dots {
     display: flex;
     overflow-x: scroll;
+    gap: 0.5ex;
 }
 
 fieldset {
     border: 0;
     margin: 0;
+    padding: 0;
 }
 legend {
     display: flex;
@@ -97,6 +99,28 @@ legend {
     align-items: center;
     width: 100%;
     gap: 0.5rem;
+}
+form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+form > * {
+    flex: 0 auto;
+    gap: 1rem;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+label {
+    display: flex;
+    flex-flow: column;
+}
+
+select {
+    -webkit-appearance: none;
 }
 h1 {
     position: relative;
@@ -141,14 +165,14 @@ legend p {
     }
 }
 
-[scheme='dark'] {
+[scheme="dark"] {
     color-scheme: dark;
     --color: white;
     --back: black;
     --accent: red;
 }
 
-[scheme='light'] {
+[scheme="light"] {
     color-scheme: light;
     --color: black;
     --back: white;
@@ -230,7 +254,7 @@ ul#slidy li.slotted {
 }
 
 ul#slidy li:before {
-    content: attr(data-id);
+    content: attr(data-index);
     position: absolute;
     z-index: 1;
     padding: 1rem;
@@ -245,7 +269,7 @@ ul#slidy li img {
     /* min-height: 100%; */
     max-width: 100%;
     object-fit: cover;
-    /* min-width: 0; */
+    min-width: 100%;
     /* position: relative; */
     /* z-index: 0; */
     /* overflow: hidden; */
@@ -271,4 +295,45 @@ ul#slidy li img {
     ul#slidy li:before {
         /* will-change: transform; */
     }
+}
+
+/* ICONS */
+.icon::after,
+.icon::before {
+    content: "";
+    display: block;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.icon-refresh::after {
+    border: 0.2em solid currentColor;
+    border-top-color: currentcolor;
+    border-left-color: currentcolor;
+    border-left-color: transparent;
+    border-top-color: transparent;
+    height: 0;
+    left: 80%;
+    top: -0.25em;
+    width: 0;
+}
+.icon-refresh::before {
+    border: 0.12rem solid currentColor;
+    border-right-color: currentcolor;
+    border-radius: 50%;
+    border-right-color: transparent;
+    height: 0.75em;
+    width: 0.75em;
+}
+.icon {
+    box-sizing: border-box;
+    display: inline-block;
+    font-size: inherit;
+    font-style: normal;
+    height: auto;
+    position: relative;
+    text-indent: -9999px;
+    vertical-align: super;
+    width: 1em;
 }
