--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -184,7 +184,7 @@ legend p {
 /* :focus, */
 :checked {
     color: var(--accent);
-    /* accent-color: var(--accent); */
+    accent-color: var(--accent);
     /* outline-color: var(--accent) !important; */
     /* will-change: transform, color; */
 }
@@ -198,7 +198,7 @@ legend p {
 }
 
 main {
-    height: 300px;
+    height: 350px;
 }
 
 section {
@@ -242,8 +242,6 @@ ul#slidy li {
     box-sizing: border-box;
     position: relative;
     box-shadow: inset 0px 0px 1px 1px var(--shadow);
-    /* border-color: transparent; */
-    /* border: 1px dashed var(--color); */
     /* will-change: transform; */
 }
 ul#slidy li.active {
@@ -264,22 +262,18 @@ ul#slidy li:before {
 }
 
 ul#slidy li img {
-    width: 100%;
-    height: 100%;
-    /* min-height: 100%; */
-    max-width: 100%;
-    object-fit: cover;
     min-width: 100%;
-    /* position: relative; */
-    /* z-index: 0; */
-    /* overflow: hidden; */
+    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
     /* will-change: transform; */
 }
 
 /* iOS */
 @supports (-webkit-touch-callout: none) {
     ul#slidy li img {
-        width: auto;
+        /* width: auto; */
         /* will-change: transform; */
     }
     ul#slidy li:before {
@@ -289,7 +283,7 @@ ul#slidy li img {
 /* MacOS */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     ul#slidy li img {
-        width: auto;
+        /* width: auto; */
         /* will-change: transform; */
     }
     ul#slidy li:before {
