--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -9,7 +9,7 @@ body {
     color: var(--color);
     background: var(--back);
     margin: 0;
-    padding: 8px;
+    padding: 1rem;
     line-height: 1.5;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
