--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -12,8 +12,8 @@ body {
     padding: 1rem;
     line-height: 1.5;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -197,7 +197,7 @@ footer {
     }
 }
 
-[scheme='dark'] {
+[scheme="dark"] {
     color-scheme: dark;
     --color: white;
     --back: #0a0a0a;
@@ -205,7 +205,7 @@ footer {
     --shadow: #181818;
 }
 
-[scheme='light'] {
+[scheme="light"] {
     color-scheme: light;
     --color: #0a0a0a;
     --back: white;
@@ -287,7 +287,7 @@ ul#slidy li.slotted {
 }
 
 ul#slidy li:before {
-    content: attr(data-index);
+    content: attr(id);
     position: absolute;
     z-index: 1;
     padding: 1rem;
@@ -330,7 +330,7 @@ ul#slidy li img {
 /* ICONS */
 .icon::after,
 .icon::before {
-    content: '';
+    content: "";
     display: block;
     left: 50%;
     position: absolute;
