--- a/packages/svelte/src/slidy.module.css
+++ b/packages/svelte/src/slidy.module.css
@@ -8,6 +8,7 @@
             --slidy-slide-height: 100%;
             --slidy-slide-width: auto;
             --slidy-slide-object-fit: cover;
+            --slidy-slide-bg-color: darkgray;
             --slidy-nav-item-size: 12px;
             --slidy-nav-item-color: white;
             --slidy-arrow-size: 24px;
@@ -17,14 +18,12 @@
 
 /* globals */
 
-.slidy * {
+.slidy *,
+.slidy *:before,
+.slidy *:after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-li {
-    list-style: none;
 }
 
 /* carousel */
@@ -59,6 +58,7 @@ li {
     width: 100%;
     height: 100%;
     max-width: 100%;
+    list-style: none;
 }
 
 .slidy-slide {
@@ -72,21 +72,13 @@ li {
     max-width: 100%;
 }
 
-.slidy-slide.as-background {
+.slidy-slide.background {
     background-image: var(--slidy-slide-bg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center;
     background-size: var(--slidy-slide-object-fit, cover);
     background-color: transparent;
-}
-
-.slidy-slides img {
-    display: block;
-    width: var(--slidy-slide-width, auto);
-    height: var(--slidy-slide-height, 100%);
-    object-fit: var(--slidy-slide-object-fit, cover);
-    min-width: 100%;
 }
 
 /* counter */
