--- a/packages/svelte/dev/public/global.css
+++ b/packages/svelte/dev/public/global.css
@@ -18,8 +18,8 @@ body {
     color: var(--color);
     background-color: var(--surface-1);
     line-height: 1.4;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
 }
 
 input[type='checkbox'] {
