--- a/packages/malina/src/app.css
+++ b/packages/malina/src/app.css
@@ -14,6 +14,10 @@
     font-family: var(--font-sans);
 }
 
+body {
+    padding: 1rem;
+}
+
 nav, label {
     display: flex; 
     justify-content: start;
