@slidy/core - indenting by snap

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -289,7 +289,7 @@ ul#scroll {
     flex: 1 0 var(--gap);
 } */
 #slidy li.active, #slidy dd.active  {
-    --shadow: var(--accent);
+    /* --shadow: var(--accent); */
 }
 #slidy li.slotted, #slidy dd.slotted {
     --shadow: transparent;
