--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -259,6 +259,7 @@ ul#scroll {
     width: 100%;
     height: 100%;
     overflow: visible;
+    /* will-change: transform; */
 }
 
 #slidy li, #slidy dd {
@@ -270,7 +271,7 @@ ul#scroll {
     box-sizing: border-box;
     position: relative;
     background: var(--shadow);
-    margin: 0;
+    margin: auto;
     box-shadow: var(--shadow-3);
     border-radius: var(--radius-3);
     /* border-radius: 0.25rem; */
