@slidy/core - free wheel & axis behavior

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -249,6 +249,7 @@ footer {
 main {
     height: var(--height, 375px);
     margin: var(--gap, 1rem) auto;
+    /* position: relative; */
 }
 
 section {
