--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -38,8 +38,8 @@ textarea {
     box-sizing: border-box;
     color: var(--color);
     background-color: var(--surface-1);
-    border: 1px solid var(--color);
-    border-radius: 0;
+    /* border: 1px solid transparent; */
+    /* border-radius: var(--radius-conditional-3); */
     accent-color: var(--accent);
 }
 
@@ -60,6 +60,7 @@ button:disabled {
 
 button:not(:disabled):active {
     background-color: var(--color);
+    border-color: var(--accent);
     color: var(--back);
 }
 
@@ -245,7 +246,7 @@ section {
 }
 
 #slidy,
-nav #thumbs {
+nav#thumbs {
     list-style: none;
     margin: 0;
     padding: var(--gap) 0;
@@ -255,11 +256,11 @@ nav #thumbs {
     min-width: 0;
     width: 100%;
     height: 100%;
-    overflow: visible;
+    /* overflow: visible; */
 }
 
 #slidy li,
-nav #thumbs li {
+nav#thumbs button {
     flex: 1 0 var(--width);
     width: var(--width);
     height: 100%;
@@ -267,34 +268,39 @@ nav #thumbs li {
     max-height: 100%;
     box-sizing: border-box;
     position: relative;
-    background: var(--shadow);
+    background: var(--surface-1);
     margin: auto;
     box-shadow: var(--shadow-3);
     border-radius: var(--radius-3);
     overflow: hidden;
+    /* will-change: transform; */
 }
 
-nav #thumbs {
+nav#thumbs {
     gap: 1rem;
+    /* touch-action: auto; */
 }
 
-nav #thumbs li {
+nav#thumbs button {
     flex: 1 0 100px;
     width: 100px;
     height: 100px;
     box-shadow: none;
-    background-image: attr(data-src url);
+    /* background-image: attr(data-src url); */
     background-size: cover;
-    opacity: 0.25;
+    background-blend-mode: overlay;
+    /* opacity: 0.25; */
 }
 
-nav #thumbs li.active,
-nav #thumbs li:hover {
-    opacity: 1;
+
+nav#thumbs button:hover,
+nav#thumbs button.active {
+    /* opacity: 1; */
+    background-blend-mode: normal;
 }
 
 #slidy li.active {
-    --shadow: var(--accent);
+    /* --shadow: var(--accent); */
 }
 
 #slidy li:before {
@@ -330,7 +336,7 @@ nav #thumbs li:hover {
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     #slidy li img {
         /* width: auto; */
-        /* will-change: transform; */
+        will-change: transform;
     }
 
     #slidy li:before {
