@slidy/core - 3.1.4 improve docs

--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -337,7 +337,7 @@ nav#thumbs button.active {
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     #node li img {
         /* width: auto; */
-        will-change: transform;
+        /* will-change: transform; */
     }
 
     #node li:before {
