--- a/packages/core/dev/dev.css
+++ b/packages/core/dev/dev.css
@@ -257,6 +257,7 @@ nav#thumbs {
     width: 100%;
     height: 100%;
     /* overflow: visible; */
+    /* will-change: transform; */
 }
 
 #node li,
@@ -264,7 +265,7 @@ nav#thumbs button {
     flex: 1 0 var(--width);
     width: var(--width);
     height: 100%;
-    max-width: 90%;
+    max-width: 85%;
     max-height: 100%;
     box-sizing: border-box;
     position: relative;
@@ -273,7 +274,7 @@ nav#thumbs button {
     box-shadow: var(--shadow-3);
     background: var(--surface-1);
     border-radius: var(--radius-3);
-    /* will-change: transform; */
+    /* will-change: transform color; */
 }
 
 nav#thumbs {
@@ -310,6 +311,7 @@ nav#thumbs button.active {
     z-index: 1;
     padding: 0.5rem 1rem;
     bottom: 0;
+    /* will-change: transform; */
 }
 
 #node li img {
